# Codeazon

./: CMakeLists.txt  test.cpp
codechef/: COVDSMPL.cpp  IOTEST.cpp  MATBREAK.cpp  SORTVS.cpp  TSHIRT.cpp  in.txt  readme.txt
codechef/cook_off/may/: CHEFSQAD.cpp  CHEFSQAD_CC.cpp  CHEFTRIP.cpp  CROADS.cpp  test.cpp
codechef/long_challange/july/: ADAKING.cpp  CHEFSTR1.cpp  CHFNSWPS.cpp  CRDGAME.cpp  PTMSSNG.cpp
codechef/long_challange/june/: CONTAIN.cpp  COVDSMPL_ED.cpp  TTUPLE.cpp  TTUPLE_ED.cpp
codechef/lunch_time/june/: CHFMOT18.cpp  CHFMOT182.cpp  INCRDEC.cpp  TESTIO.cpp
codechef/practice/: CHEFPOLY.cpp
codechef/res/: ADAKING.txt  CHEFPOLY.txt  TTUPLE.txt
gfg/: inversion_count_using_bit.cpp  inversion_count_using_bit_on_memory.cpp
pointers/: introduction.cpp  readme.md  working.cpp
temp/: t1.cpp
