cmake_minimum_required(VERSION 3.16)
project(Codeazon)

set(CMAKE_CXX_STANDARD 14)
add_executable(TSHIRT codechef/TSHIRT.cpp)
add_executable(SORTVS codechef/SORTVS.cpp)
add_executable(MATBREAK codechef/MATBREAK.cpp)
add_executable(test codechef/cook_off/may/test.cpp)
add_executable(CHEFTRIP codechef/cook_off/may/CHEFTRIP.cpp)
add_executable(CHEFSQAD codechef/cook_off/may/CHEFSQAD.cpp)
add_executable(inversion_count_using_bit gfg/inversion_count_using_bit.cpp)

add_executable(inversion_count_using_bit_on_memory gfg/inversion_count_using_bit_on_memory.cpp)
add_executable(CHEFSQAD_CC codechef/cook_off/may/CHEFSQAD_CC.cpp)
add_executable(CROADS codechef/cook_off/may/CROADS.cpp)

add_executable(COVDSMPL codechef/COVDSMPL.cpp)
add_executable(INCRDEC codechef/lunch_time/june/INCRDEC.cpp)
add_executable(IOTEST codechef/IOTEST.cpp)
add_executable(CHFMOT18 codechef/lunch_time/june/CHFMOT18.cpp)
add_executable(TESTIO codechef/lunch_time/june/TESTIO.cpp)
add_executable(CHFMOT182 codechef/lunch_time/june/CHFMOT182.cpp)
add_executable(CHEFSTR1 codechef/long_challange/july/CHEFSTR1.cpp)
add_executable(CRDGAME codechef/long_challange/july/CRDGAME.cpp)
add_executable(ADAKING codechef/long_challange/july/ADAKING.cpp)
add_executable(PTMSSNG codechef/long_challange/july/PTMSSNG.cpp)
add_executable(CHFNSWPS codechef/long_challange/july/CHFNSWPS.cpp)
add_executable(TTUPLE codechef/long_challange/june/TTUPLE.cpp)
add_executable(TTUPLE_ED codechef/long_challange/june/TTUPLE_ED.cpp)
add_executable(CONTAIN codechef/long_challange/june/CONTAIN.cpp)
add_executable(CHEFPOLY codechef/practice/CHEFPOLY.cpp)
add_executable(COVDSMPL_ED codechef/long_challange/june/COVDSMPL_ED.cpp)
add_executable(introduction pointers/introduction.cpp)
add_executable(working pointers/working.cpp)
add_executable(t1 temp/t1.cpp)